--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Erm hey.</title>
+  	<meta name="viewport" content="width=device-width">
+  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>KDJ Concepts</title>
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
   </head>
   <body>
-    <img src="https://media.giphy.com/media/3o6Zt7aSSZLX6U5WtW/source.gif">
+  	<header>
+  	</header>
+  	<main class="ctr">
+  		<h1>Coming Soon.</h1>
+  	</main>
   </body>
 </html>
